2006-11-19  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptp-pack.c:
	  From Libmtp folks:
	  Implemented MTP GetObjProplist opcode.

	  Handle the PTP violating READ (length 0xffffffff).

	* library.c: Added PowerShot G7.

2006-11-15  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Kodak C643, Samsung YP-K5.
	* library.c: added Creative Zen Vision W

2006-11-12  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, ptp-pack.c: Implementation of 
	MTP_SendObjectproplist from the libmtp folks.

	* library.c: added Creative Zen Vision M

2006-11-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Do incremental event read only for
	  actual PTP events.

	* library.c: added Nikon CoolPix L1, Kodak C530.
	* library.c: Added some HP Photosmarts, USB ids
	  extracted from the .INF files downloadable from hp.com.

2006-11-04  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon Digital IXUS 850 IS
	* library.c: removed pragma pack(1) ... umm.

2006-10-31  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon PowerShot A640.
	* library.c: Added Nikon D80.
	
2006-10-23  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h: render more MTP opcodes. (from libmtp).

2006-10-21  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Check sequence number sequence. A mismatched response
		sequence number indicates a problem.
	* library.c: On read errors, clear USB HALT of the IN EP.
	* library.c: Added Toshiba Gigabeat S.

2006-10-18  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: added HP Photosmart M425

2006-10-16  Marcus Meissner  <marcus@jet.franken.de>
	* library.c: Added Creative Zen Vplus, Dunlop MP3 Player 1GB,
	  EGOMAN MD223AFD (submitted by libmtp folks).

2006-10-14  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: removed unused variable j
		The Canon fast retrieval seems to be a bit flawed
		on the IXUS 55, so add some checking.
