@@ -342,7 +342,7 @@ static struct {
 	/* Marc Santhoff <M.Santhoff@t-online.de> */
 	{"Kodak:C643",   0x040a, 0x05a7, 0},
         /* via IRC */
-        {"Kodak:C633",   0x040a, 0x05ba, 0},
+	{"Kodak:C633",   0x040a, 0x05ba, 0},
 
 	/* HP PTP cameras */
 	{"HP:PhotoSmart 812 (PTP mode)", 0x03f0, 0x4202, 0},
@@ -780,6 +780,8 @@ static struct {
 	{"Samsung:YP-F2J",			0x04e8, 0x5057, PTP_MTP},
 	/* Reported by Patrick <skibler@gmail.com> */
 	{"Samsung:YP-K5",			0x04e8, 0x505a, PTP_MTP},
+	/* Reported by Matthew Wilcox <matthew@wil.cx> */
+	{"Samsung Yepp T9",			0x04e8, 0x507f, PTP_MTP},
 
 	{"Samsung:YH-999 Portable Media Center",0x04e8, 0x5a0f, PTP_MTP},
 
@@ -791,6 +793,10 @@ static struct {
 	{"Sandisk:Sansa e200",			0x0781, 0x7420, PTP_MTP},
 	{"Sandisk:Sansa e260",			0x0781, 0x7420, PTP_MTP},
 
+	/* Reported by Farooq Zaman. NOTE: Can just list files currently and might have other problems! */
+	{"Microsoft:Zune",			0x045e, 0x0710, PTP_MTP},
+	/* From Richard Low */
+	{"Sirius:Stiletto",			0x18f6, 0x0102, PTP_MTP }
 };
 
 static struct {
