@@ -1,3 +1,14 @@
+2006-11-30  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Added Microsoft Zune (not fully working!)
+	* library.c: Added Sirius Stilletto.
+	
+
+2006-11-27  Marcus Meissner  <marcus@jet.franken.de>
+
+	* ptp.c,ptp.h,ptp-pack.c:
+	  Bugfixes for GetObjProplist code.
+
 2006-11-19  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.c,ptp.h,ptp-pack.c:
